spacing bug

--- a/css/art.css
+++ b/css/art.css
@@ -11,13 +11,11 @@
 .img-spacing {
   width: 100%;
   height: 0px;
-  margin-top: 3rem;
 }
 
 .img-spacing-half {
   width: 100%;
-  height: 0px
-  margin-top: 3rem;
+  height: 0px;
 }
 
 
